--- a/src/pages/Home/components/Days/Days.module.scss
+++ b/src/pages/Home/components/Days/Days.module.scss
@@ -50,3 +50,28 @@
     box-shadow: 0px 3px 20px rgba(147, 144, 144, 0.28);
   }
 }
+
+.tabs {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 7px;
+}
+
+.cancel,
+.tab {
+  box-shadow: 2px 5px 25px -3px rgba(180, 180, 180, 0.25);
+  border: none;
+  border-radius: 5px;
+  padding: 9px 20px;
+  background-color: $light-background;
+  color: $light-color;
+  font-size: 18px;
+  cursor: pointer;
+}
+.tab {
+  margin-right: 15px;
+  &.active {
+    background-color: $primary-color;
+    color: #fff;
+  }
+}
