--- a/src/pages/Home/components/Days/Days.module.scss
+++ b/src/pages/Home/components/Days/Days.module.scss
@@ -6,7 +6,7 @@
   flex-wrap: wrap;
   padding: 20px;
   width: 100%;
-  background-color: var(#{--components-background-default});
+  background-color: $light-background;
   box-shadow: $box-shadow;
   border-radius: 0 0 $border-radius $border-radius;
 }
