--- a/src/pages/Home/components/ThisDayInfo/ThisDayInfo.module.scss
+++ b/src/pages/Home/components/ThisDayInfo/ThisDayInfo.module.scss
@@ -7,7 +7,7 @@
   width: 100%;
   box-shadow: $box-shadow;
   border-radius: $border-radius;
-  background: var(#{--components-background-default});
+  background: $light-background;
 }
 
 .item {
