--- a/src/pages/Home/components/ThisDay/ThisDay.module.scss
+++ b/src/pages/Home/components/ThisDay/ThisDay.module.scss
@@ -4,7 +4,7 @@
   padding: 20px;
   max-width: 400px;
   width: 100%;
-  background: $light-background;
+  background: var(#{--components-background-default});
   box-shadow: $box-shadow;
   border-radius: $border-radius;
 }
@@ -27,7 +27,7 @@
   .tomorrow {
     font-weight: 400;
     font-size: 40px;
-    color: $light-color;
+    color: var(#{--text-color-default})
   }
   .temperature,
   .tomorrow {
